fixed charckter jump animation, game is now displayed properly on small displays, mobile buttons are only visible if game is started

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 @media only screen and (max-height: 600px) {
  canvas {
-     height: 100vh;
+     height: 98vh;
      width: fit-content;
  }
   #controllBox {
